<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/guillotine_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu_black" />
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/start_verification"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_activity" />

        <widgets.CanaroTextView
            android:id="@+id/verification_tv"
            style="@style/TextView.GuillotineItem"
            android:text="@string/activity" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/check_results"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_feed" />

        <widgets.CanaroTextView
            android:id="@+id/check_results_tv"
            style="@style/TextView.GuillotineItem"
            android:text="@string/feed" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/settings_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_settings" />

        <widgets.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/settings" />
    </LinearLayout>
</LinearLayout>